dashboard UI got wonky. fixed the whitespace issue

--- a/frontend/css/dashboard.css
+++ b/frontend/css/dashboard.css
@@ -13,7 +13,10 @@ img {
 }
 
 #subheader {
-    height: 38px;
+    height: 32px;
+    margin: 0;
+    padding: 0;
+    border: 0;
     background-image: url("../images/toolbar_sub_bg.png");
 }
 
@@ -37,48 +40,48 @@ img {
 }
 
 #projects {
-  float: left;
-  width: 181px;
-  background-color: #3d3b34;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
+    float: left;
+    width: 181px;
+    background-color: #3d3b34;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
 }
 
 #project_header {
-  color: #FFF;
-  font-size: 10pt;
-  height: 18px;
-  padding-left: 8px;
-  padding-top: 2px;
-  background-image: url("../images/dash_column_hdr.gif");
-  background-repeat: no-repeat;
+    color: #FFF;
+    font-size: 10pt;
+    height: 18px;
+    padding-left: 8px;
+    padding-top: 2px;
+    background-image: url("../images/dash_column_hdr.gif");
+    background-repeat: no-repeat;
 }
 
 ul#projectlist {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 ul#projectlist li img {
-  float: right;
-  padding-right: 4px;
-  padding-top: 2px;
+    float: right;
+    padding-right: 4px;
+    padding-top: 2px;
 }
 
 ul#projectlist li:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 ul#projectlist li {
-  padding-left: 8px;
-  color: #eee;
-  font-size: 9pt;
-  padding-top: 2px;
-  height: 18px;
-  font-family: Tahoma;
+    padding-left: 8px;
+    color: #eee;
+    font-size: 9pt;
+    padding-top: 2px;
+    height: 18px;
+    font-family: Tahoma;
 }
 
 li.deselected {
@@ -89,112 +92,111 @@ li.selected {
     background-image: url("../images/dash_proj_bg_on.gif");
 }
 
-
 #team_header {
-  color: #FFF;
-  font-size: 10pt;
-  height: 18px;
-  padding-left: 8px;
-  padding-top: 2px;
-  background-image: url("../images/dash_column_hdr.gif");
-  background-repeat: repeat-x;
+    color: #FFF;
+    font-size: 10pt;
+    height: 18px;
+    padding-left: 8px;
+    padding-top: 2px;
+    background-image: url("../images/dash_column_hdr.gif");
+    background-repeat: repeat-x;
 }
 
 #sessions_header {
-  color: #FFF;
-  font-size: 10pt;
-  height: 18px;
-  margin-top: 30px;
-  padding-left: 8px;
-  padding-top: 2px;
-  background-image: url("../images/dash_column_hdr.gif");
-  background-repeat: no-repeat;          
+    color: #FFF;
+    font-size: 10pt;
+    height: 18px;
+    margin-top: 30px;
+    padding-left: 8px;
+    padding-top: 2px;
+    background-image: url("../images/dash_column_hdr.gif");
+    background-repeat: no-repeat;          
 }
 
 ul#sessionslist {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 ul#sessionslist > li {
-  padding-left: 8px;
-  color: #eee;
-  font-size: 9pt;
-  padding-top: 2px;
-  font-family: Tahoma;
-  background-repeat: no-repeat;
+    padding-left: 8px;
+    color: #eee;
+    font-size: 9pt;
+    padding-top: 2px;
+    font-family: Tahoma;
+    background-repeat: no-repeat;
 }
 
 ul#sessionslist li ul {
-  list-style-type: none;
-  padding-left: 15px;
-  background-image: none;
+    list-style-type: none;
+    padding-left: 15px;
+    background-image: none;
 }
 
 ul#sessionslist li ul li {
-  list-style-image: url("../images/files_icn_file.png");
-  list-style-position: inside;
-  background-image: none;
-  padding-top: 2px;
+    list-style-image: url("../images/files_icn_file.png");
+    list-style-position: inside;
+    background-image: none;
+    padding-top: 2px;
 }        
 
 #files {
-  position: absolute;
-  top: 64px;
-  bottom: 33px;
-  left: 181px;
-  width: 180px;
-  background-image: url("../images/zebra_files.png");
-  background-repeat: repeat-y;
+    position: absolute;
+    top: 64px;
+    bottom: 33px;
+    left: 181px;
+    width: 180px;
+    background-image: url("../images/zebra_files.png");
+    background-repeat: repeat-y;
 }
 
 #files ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 #files ul li {
-  list-style-image: url("../images/files_icn_file.png");
-  list-style-position: inside;
-  padding-left: 8px;
-  padding-top: 2px;
+    list-style-image: url("../images/files_icn_file.png");
+    list-style-position: inside;
+    padding-left: 8px;
+    padding-top: 2px;
 }
 
 #files ul li a {
-  color: #eee;
-  font-size: 9pt;
-  font-family: Tahoma;
-  text-decoration: none;
+    color: #eee;
+    font-size: 9pt;
+    font-family: Tahoma;
+    text-decoration: none;
 }
 
 #sessionslist ul li a {
-  color: #eee;
-  font-size: 9pt;
-  font-family: Tahoma;
-  text-decoration: none;
+    color: #eee;
+    font-size: 9pt;
+    font-family: Tahoma;
+    text-decoration: none;
 }
 
 #graphs {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 181px;
-  right: 200px;
-  background-color: #4c4a41;
-  border-left: 1px solid black;
-  border-right: 1px solid #65635d;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 181px;
+    right: 200px;
+    background-color: #4c4a41;
+    border-left: 1px solid black;
+    border-right: 1px solid #65635d;
 }
 
 #team {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  float: right;
-  width: 200px;
-  background-color: #3d3b34;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    float: right;
+    width: 200px;
+    background-color: #3d3b34;
 }
 
 #footer {
@@ -219,11 +221,11 @@ ul#sessionslist li ul li {
 
 #status {
     width: 10%;
-    height: 31px;
+    height: 26px;
     float: left;
-    margin: 4px 0 0 10px;
+    margin: 6px 0 0 10px;
     color: #DDDDDD;
-    font-family: Calibri;
+    font-family: Calibri, Arial, sans-serif;
     font-size: 12pt;
 }
 
